--- a/public/products/pinky-doll.html
+++ b/public/products/pinky-doll.html
@@ -6,7 +6,7 @@
     <meta property="og:description" content="Buket manis dengan sentuhan romantis dan playful yang bikin siapa pun langsung gemas 💕
     Perpaduan teddy bear wisuda yang lucu dengan rangkaian mawar merah & pink lembut menciptakan kesan hangat, bangga, dan penuh cinta.
     Cocok banget untuk hadiah wisuda, ulang tahun, anniversary, atau bentuk apresiasi spesial untuk orang tersayang. Buket ini bukan cuma cantik difoto, tapi juga jadi kenangan manis yang bisa disimpan lama ✨">
-    <meta property="og:image" content="https://sediakado.netlify.app/images/products/buket-2.jpg">
+    <meta property="og:image" content="https://sediakado.netlify.app/images/products/buket-2.png">
     <meta property="og:url" content="https://sediakado.netlify.app/products/pinky-doll.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Sedia Kado">
