--- a/public/products/creamy-pink.html
+++ b/public/products/creamy-pink.html
@@ -4,7 +4,7 @@
     <title>Creamy Pink</title>
     <meta property="og:title" content="Creamy Pink">
     <meta property="og:description" content="Buket cantik dengan sentuhan warna pastel yang lembut dan elegan. Perpaduan bunga pink, peach, putih, dan sentuhan gold di wrapping-nya bikin tampilannya mewah tapi tetap manis. Cocok banget untuk hadiah ulang tahun, anniversary, wisuda, atau sekadar bilang “aku sayang kamu”. Buket ini punya vibes hangat, romantis, dan classy — bikin siapa pun yang nerima langsung senyum-senyum sendiri 🤍✨">
-    <meta property="og:image" content="https://sediakado.netlify.app/images/products/creamy-pink.jpg">
+    <meta property="og:image" content="https://sediakado.netlify.app/images/products/buket-1.png">
     <meta property="og:url" content="https://sediakado.netlify.app/products/creamy-pink.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Sedia Kado">
