--- a/public/products/creamy-pink.html
+++ b/public/products/creamy-pink.html
@@ -11,6 +11,7 @@
     <meta property="og:locale" content="id_ID">
 
     <!-- redirect to /catalog -->
+     <meta http-equiv="refresh" content="2; url=/product/creamy-pink">
 </head>
 <body>
     
