--- a/public/products/pinky-doll.html
+++ b/public/products/pinky-doll.html
@@ -13,6 +13,7 @@
     <meta property="og:locale" content="id_ID">
 
     <!-- redirect to /catalog -->
+     <meta http-equiv="refresh" content="2; url=/product/pinky-doll">
 </head>
 <body>
     
