update product contents

--- a/public/products/graduation-teddy-rose.html
+++ b/public/products/graduation-teddy-rose.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Pinky Doll</title>
-    <meta property="og:title" content="Pinky Doll">
+    <title>Graduation Teddy Rose Bouquet</title>
+    <meta property="og:title" content="Graduation Teddy Rose Bouquet">
     <meta property="og:description" content="Buket manis dengan sentuhan romantis dan playful yang bikin siapa pun langsung gemas 💕
     Perpaduan teddy bear wisuda yang lucu dengan rangkaian mawar merah & pink lembut menciptakan kesan hangat, bangga, dan penuh cinta.
     Cocok banget untuk hadiah wisuda, ulang tahun, anniversary, atau bentuk apresiasi spesial untuk orang tersayang. Buket ini bukan cuma cantik difoto, tapi juga jadi kenangan manis yang bisa disimpan lama ✨">
     <meta property="og:image" content="https://sediakado.netlify.app/images/buket-2.webp">
-    <meta property="og:url" content="https://sediakado.netlify.app/products/pinky-doll.html">
+    <meta property="og:url" content="https://sediakado.netlify.app/products/graduation-teddy-rose.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Sedia Kado">
     <meta property="og:locale" content="id_ID">
 
     <!-- redirect to /catalog -->
-     <meta http-equiv="refresh" content="2; url=/product/pinky-doll">
+     <meta http-equiv="refresh" content="2; url=/product/graduation-teddy-rose">
 </head>
 <body>
     
