--- a/public/products/luxury-money-bouquet-elegant.html
+++ b/public/products/luxury-money-bouquet-elegant.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Creamy Pink</title>
-    <meta property="og:title" content="Creamy Pink">
+    <title>Luxury Money Bouquet Elegant</title>
+    <meta property="og:title" content="Luxury Money Bouquet Elegant">
     <meta property="og:description" content="Buket cantik dengan sentuhan warna pastel yang lembut dan elegan. Perpaduan bunga pink, peach, putih, dan sentuhan gold di wrapping-nya bikin tampilannya mewah tapi tetap manis. Cocok banget untuk hadiah ulang tahun, anniversary, wisuda, atau sekadar bilang “aku sayang kamu”. Buket ini punya vibes hangat, romantis, dan classy — bikin siapa pun yang nerima langsung senyum-senyum sendiri 🤍✨">
-    <meta property="og:image" content="https://sediakado.netlify.app/images/buket-1.webp">
-    <meta property="og:url" content="https://sediakado.netlify.app/products/creamy-pink.html">
+    <meta property="og:image" content="https://sediakado.netlify.app/images/buket-3.webp">
+    <meta property="og:url" content="https://sediakado.netlify.app/products/luxury-money-bouquet-elegant.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Sedia Kado">
     <meta property="og:locale" content="id_ID">
 
     <!-- redirect to /catalog -->
-     <meta http-equiv="refresh" content="2; url=/product/creamy-pink">
+     <meta http-equiv="refresh" content="2; url=/product/luxury-money-bouquet-elegant">
 </head>
 <body>
     
